Added dock previews.

--- a/docks/crystal-clear/background.ini
+++ b/docks/crystal-clear/background.ini
@@ -1,5 +1,5 @@
 [Info]
-Name = MetalTxus - Crystal clear
+Name = [MetalTxus] Crystal clear
 Author = MetalTxus
 IndicatorImage = indicator.png
 ProportionalStretch = 1
