Updated rainmeter skins.

--- a/rainmeter/standalone-skins/Flat/Time/Regular Big (hotkey only).ini
+++ b/rainmeter/standalone-skins/Flat/Time/Regular Big (hotkey only).ini
@@ -1,12 +1,12 @@
+[Rainmeter]
+@IncludeCore = timeCore.inc
+
 [Variables]
 FontSize = 64
-FontWeight = 400
 Width = 210
 Height = 74
-HalfWidth = 105
-HalfHeight = 37
-
-@IncludeCore = timeCore.inc
+TextX = 105
+TextY = 37
 
 [Rainmeter]
 Group = HotkeyToggle | HotkeyOnly
