--- a/rainmeter/standalone-skins/Flat/Time/Regular Small.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Regular Small.ini
@@ -1,9 +1,10 @@
+[Rainmeter]
+@IncludeCore = timeCore.inc
+
 [Variables]
 FontSize = 16
 FontWeight = 500
 Width = 56
 Height = 20
-HalfWidth = 28
-HalfHeight = 10
-
-@IncludeCore = timeCore.inc
+TextX = 28
+TextY = 10
