--- a/rainmeter/standalone-skins/Flat/Time/Regular Tiny.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Regular Tiny.ini
@@ -1,9 +1,10 @@
+[Rainmeter]
+@IncludeCore = timeCore.inc
+
 [Variables]
 FontSize = 12
 FontWeight = 500
 Width = 44
 Height = 18
-HalfWidth = 22
-HalfHeight = 9
-
-@IncludeCore = timeCore.inc
+TextX = 22
+TextY = 9
