Updated mono clocks

--- a/rainmeter/standalone-skins/Flat/Time/Mono 10x10.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 10x10.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 5x5 Pixel Clock
+FontFace = 5x5 MT Pixel
 FontSize = 7.5
-Width = 62
+Width = 54
 Height = 14
 
 @IncludeCore = mono.inc
