--- a/rainmeter/standalone-skins/Flat/Time/Mono 10x14.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 10x14.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 5x7 Pixel Clock
+FontFace = 5x7 MT Pixel
 FontSize = 10.5
-Width = 62
+Width = 54
 Height = 18
 
 @IncludeCore = mono.inc
