--- a/rainmeter/standalone-skins/Flat/Time/Mono 5x5.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 5x5.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 5x5 Pixel Clock
+FontFace = 5x5 MT Pixel
 FontSize = 3.75
-Width = 33
+Width = 29
 Height = 9
 
 @IncludeCore = mono.inc
