--- a/rainmeter/standalone-skins/Flat/Time/Mono 5x7.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 5x7.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 5x7 Pixel Clock
-FontSize = 5.5
-Width = 34
+FontFace = 5x7 MT Pixel
+FontSize = 5.25
+Width = 29
 Height = 11
 
 @IncludeCore = mono.inc
