--- a/rainmeter/standalone-skins/Flat/Time/Mono 6x10.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 6x10.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 3x5 Pixel Clock
+FontFace = 3x5 MT Pixel
 FontSize = 7.5
-Width = 42
+Width = 38
 Height = 14
 
 @IncludeCore = mono.inc
