--- a/rainmeter/standalone-skins/Flat/Time/Mono 3x5.ini
+++ b/rainmeter/standalone-skins/Flat/Time/Mono 3x5.ini
@@ -2,9 +2,9 @@
 @IncludeCore = timeCore.inc
 
 [Variables]
-FontFace = 3x5 Pixel Clock
-FontSize = 3.5
-Width = 22
+FontFace = 3x5 MT Pixel
+FontSize = 3.75
+Width = 21
 Height = 9
 
 @IncludeCore = mono.inc
