Made toolbar_field a tad less dark.

--- a/firefox/firefox-brand-darker/manifest.json
+++ b/firefox/firefox-brand-darker/manifest.json
@@ -8,7 +8,7 @@
       "tab_background_text": "#ffffff",
       "toolbar": "#201339",
       "bookmark_text": "#ffffff",
-      "toolbar_field": "#08050e",
+      "toolbar_field": "#100a1d",
       "toolbar_field_text": "#ffffff",
       "tab_line": "#201339"
     }
